rke2/role/deploy_app/files/argocd_yaml/aibot/cms/aibot-cms-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aibot-cms-deployment
  namespace: vas-aibot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aibot-cms-app
  template:
    metadata:
      labels:
        app: aibot-cms-app
    spec:
      restartPolicy: Always
      nodeSelector:
        node-role.kubernetes.io/worker: "true"

      containers:
      - name: aibot-cms-app
        image: "REGISTRYIP/vas/aibot/cms:AIBOT_VER"
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "1"
            memory: "1Gi"
          limits:
            cpu: "4"
            memory: "8Gi"
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: server-aibot-cms-log-volume
          mountPath: /jb_log
      - name: aibot-cms-fluent-bit
        image: "REGISTRYIP/bitnami/fluent-bit:2.2.0"
        volumeMounts:
        - name: server-aibot-cms-log-volume
          mountPath: /jb_log
        - name: aibot-cms-fluentbit-config
          mountPath: /opt/bitnami/fluent-bit/conf/fluent-bit.conf
          subPath: fluent-bit.conf
        - name: aibot-cms-fluentbit-parser
          mountPath: /opt/bitnami/fluent-bit/conf/aibot-parsers.conf
          subPath: aibot-parsers.conf

      volumes:
      - name: server-aibot-cms-log-volume
        emptyDir: {}
      - name: aibot-cms-fluentbit-config
        configMap:
          name: aibot-cms-fluentbit-configmap
          items:
          - key: fluent-bit.conf
            path: fluent-bit.conf
      - name: aibot-cms-fluentbit-parser
        configMap:
          name: aibot-cms-fluentbit-configmap
          items:
          - key: aibot-parsers.conf
            path: aibot-parsers.conf
